--- a/Q-3SAT/main.ipynb
+++ b/Q-3SAT/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +31,15 @@
     "import scipy\n",
     "\n",
     "from sat import *\n",
-    "from qaoa import qaoa,get_params"
+    "from qaoa import qaoa,get_params\n",
+    "from numpy import array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 42min 10s, sys: 4min 51s, total: 47min 2s\n",
-      "Wall time: 3h 36min 36s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "N=15\n",
@@ -80,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,84 +117,6 @@
     "overlap_1=projection_ground_space(cnf_1,6,20)\n",
     "print(params_1)\n",
     "print(overlap_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 3, 4])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tt=np.array([0,1,1,0,0])\n",
-    "np.where( tt== tt.min())[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AA=sparse.csc_matrix((1, 5), dtype=int)\n",
-    "# for i in np.where( tt== tt.min())[0]:\n",
-    "#     AA[0,i]=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tim/anaconda3/lib/python3.6/site-packages/scipy/sparse/compressed.py:742: SparseEfficiencyWarning: Changing the sparsity structure of a csc_matrix is expensive. lil_matrix is more efficient.\n",
-      "  SparseEfficiencyWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in np.where( tt== tt.min())[0]:\n",
-    "    AA[0,i]=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 0, 1, 1]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AA.toarray()"
    ]
   },
   {
