Fixed bugs for TF

--- a/Q-3SAT/main.ipynb
+++ b/Q-3SAT/main.ipynb
@@ -42,24 +42,24 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "N=15\n",
+    "N=20\n",
     "beta=0.20\n",
     "with pymp.Parallel(6) as pp:\n",
     "    for m in pp.range(1, 20*N):\n",
     "        clauses=[]\n",
     "        overlap=[]\n",
-    "        for i in range(100):\n",
+    "        for i in range(500):\n",
     "            cnf=cnf_random_generator(N,m)\n",
     "            overlap.append(thermal_overlap(cnf,N,beta))\n",
     "            clauses.append(m)\n",
-    "        bits=[N]*100\n",
-    "        bet=[beta]*100\n",
+    "        bits=[N]*500\n",
+    "        bet=[beta]*500\n",
     "        df=pd.DataFrame(data={'bits':np.array(bits).ravel(), \n",
     "                            'beta':np.array(bet).ravel(), \n",
     "                            'clauses': np.array(clauses).ravel(), \n",
     "                            'overlap': np.array(overlap).ravel()})\n",
     "        df=df[['bits','beta','clauses','overlap']]\n",
-    "        with open('3_SAT_cooling_15_a.csv', 'a') as f:\n",
+    "        with open('3_SAT_cooling_20.csv', 'a') as f:\n",
     "            df.to_csv(f, header=False)"
    ]
   },
