Q-3SAT add QAOA for fixed p

--- a/Q-3SAT/main.ipynb
+++ b/Q-3SAT/main.ipynb
@@ -31,7 +31,7 @@
     "import scipy\n",
     "\n",
     "from sat import *\n",
-    "from qaoa import qaoa,get_params\n",
+    "from qaoa import *\n",
     "from numpy import array"
    ]
   },
@@ -72,51 +72,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# projection on ground_state\n",
-    "def projection_ground_space(cnf, n_qubits, p):\n",
+    "B=B_operator(10)\n",
+    "initial_state=plus_state(10)\n",
+    "\n",
+    "def optimization_function(H,p,params):\n",
+    "    ini_state=initial_state\n",
+    "    for k in range(p):\n",
+    "        ini_state=lasp.expm_multiply(1j*params[2*k]*H, ini_state)\n",
+    "        ini_state=lasp.expm_multiply(-1j*params[2*k+1]*B,ini_state)\n",
+    "    return ((sparse.spmatrix.getH(ini_state)).dot(H.dot(ini_state))).real, ini_state\n",
+    "\n",
+    "def angles(H,p):\n",
+    "    def fun(x):\n",
+    "#         we minimize f to find max for F \n",
+    "        return optimization_function(H, p, params=x)[0]\n",
+    "# starting point\n",
+    "    params_0=[0.25*np.pi for i in range(2*p)]\n",
+    "    params_min=[0 for i in range(2*p)]\n",
+    "    params_max=[2*np.pi if i%2==0 else np.pi for i in range(2*p)]\n",
+    "    # the bounds required by L-BFGS-B\n",
+    "    bounds = [(low, high) for low, high in zip(params_min, params_max)]\n",
+    "# use method L-BFGS-B because the problem is smooth and bounded\n",
+    "    result = scipy.optimize.minimize(fun, params_0, method=\"L-BFGS-B\",bounds=bounds)\n",
+    "    return [result.x[i] for i in range(2*p)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def optimal_p(cnf, N=10, e=0.75):\n",
+    "    H=cnf_to_hamiltonian(cnf,N)\n",
+    "    H_0=H.diagonal()\n",
+    "#     find minimal eigenvalue and the superposition of ground states\n",
+    "    min_energy=np.where(H_0 == H_0.min())[0]\n",
+    "#   mixinf of all ground states\n",
+    "    ground_state=np.zeros(2**N)\n",
+    "    for i in min_energy:\n",
+    "        ground_state[i]=1\n",
     "    result=0\n",
-    "    qaoa_state=qaoa(cnf_to_hamiltonian(cnf,n_qubits),n_qubits, p)[1]\n",
-    "    for i in np.where(ground_state(cnf, n_qubits) != 0)[0]:\n",
+    "    p=0\n",
+    "    while result<1-e:\n",
+    "        p+=1\n",
+    "        ini_state=initial_state\n",
+    "        optimal_parameters=angles(H,p)\n",
+    "        qaoa_state=optimization_function(H,p,optimal_parameters)[1]\n",
+    "        for i in np.where(ground_state != 0)[0]:\n",
+    "            result+=np.abs(qaoa_state[i])**2\n",
+    "\n",
+    "    return p\n",
+    "\n",
+    "# return overlap between ground space and QAOA state\n",
+    "def overlap_p(p, cnf, N=10):\n",
+    "    H=cnf_to_hamiltonian(cnf,N)\n",
+    "    H_0=H.diagonal()\n",
+    "#     find minimal eigenvalue and the superposition of ground states\n",
+    "    min_energy=np.where(H_0 == H_0.min())[0]\n",
+    "#   mixinf of all ground states\n",
+    "    ground_state=np.zeros(2**N)\n",
+    "    for i in min_energy:\n",
+    "        ground_state[i]=1\n",
+    "    \n",
+    "    result=0\n",
+    "    optimal_parameters=angles(H,p)\n",
+    "    qaoa_state=optimization_function(H,p,optimal_parameters)[1]\n",
+    "    for i in np.where(ground_state != 0)[0]:\n",
     "        result+=np.abs(qaoa_state[i])**2\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnf_1=[np.array([ 1,  2, -6]),\n",
-    " np.array([ 1, -4, -5]),\n",
-    " np.array([ 1,  3, -6]),\n",
-    " np.array([-1, -2, -6]),\n",
-    " np.array([ 4,  5, -6])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.7404243161981697, 0.7775705695468255, 0.8187786578279733, 0.7188965854341821, 0.7814507895438692, 0.8340820742165719, 0.7083027607864854, 0.7807916428951017, 0.8392077522875999, 0.6988261041793634, 0.7955913112924764, 0.8261247194852741, 0.7040836153170253, 0.8178849837503516, 0.7980209751846071, 0.7123036523177729, 0.8308038426542279, 0.7721200722771089, 0.728850755760836, 0.8444957138872297, 0.7531678651687724, 0.7438252657893544, 0.8354543962559151, 0.7515014286641527, 0.7501788552600639, 0.8169326305992927, 0.767025182472883, 0.7574250008874013, 0.7912838120398488, 0.7915613646347153, 0.7476246906095821, 0.7676649029793906, 0.8167839505967803, 0.7436172772770399, 0.7570473310538989, 0.8373782655470808, 0.7259122225052086, 0.7692653469118514, 0.8303199569221997, 0.7170786728528618]\n",
-      "0.8749999997103098\n"
-     ]
-    }
-   ],
-   "source": [
-    "params_1=get_params(cnf_to_hamiltonian(cnf_1,6),6,20)\n",
-    "overlap_1=projection_ground_space(cnf_1,6,20)\n",
-    "print(params_1)\n",
-    "print(overlap_1)"
+    "        \n",
+    "    return result\n",
+    "    "
    ]
   },
   {
@@ -126,26 +151,123 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "N=10\n",
-    "p=3\n",
+    "overlap_p(p=2,cnf=cnf_random_generator(10,42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "optimal_p(cnf_random_generator(10,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "with pymp.Parallel(6) as pp:\n",
-    "    for m in pp.range(1, 15*N):\n",
+    "    for m in pp.range(1, 100):\n",
     "        clauses=[]\n",
-    "        overlap=[]\n",
+    "        iterations_p=[]\n",
     "        for i in range(100):\n",
-    "            cnf=cnf_random_generator(N,m)\n",
-    "            overlap.append(projection_ground_space(cnf=cnf,n_qubits=N,p=p))\n",
+    "            cnf=cnf_random_generator(10,m)\n",
+    "            iterations_p.append(optimal_p(cnf,10))\n",
     "            clauses.append(m)\n",
-    "        bits=[N]*100\n",
-    "        bet=[p]*100\n",
-    "        df=pd.DataFrame(data={'bits':np.array(bits).ravel(), \n",
-    "                            'p':np.array(bet).ravel(), \n",
+    "        df=pd.DataFrame(data={'p':np.array(iterations_p).ravel(), \n",
     "                            'clauses': np.array(clauses).ravel(), \n",
-    "                            'overlap': np.array(overlap).ravel()})\n",
-    "        df=df[['bits','p','clauses','overlap']]\n",
-    "        with open('3_SAT_qaoa_10.csv', 'a') as f:\n",
+    "                            })\n",
+    "        df=df[['p','clauses']]\n",
+    "        with open('3_SAT_qaoa_10_025.csv', 'a') as f:\n",
     "            df.to_csv(f, header=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fix p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "p=2\n",
+    "with pymp.Parallel(6) as pp:\n",
+    "    for m in pp.range(1, 100):\n",
+    "        clauses=[]\n",
+    "        overlap=[]\n",
+    "        for i in range(500):\n",
+    "            cnf=cnf_random_generator(10,m)\n",
+    "            overlap.append(overlap_p(p,cnf,10))\n",
+    "            clauses.append(m)\n",
+    "        iterations_p=[p]*500\n",
+    "        df=pd.DataFrame(data={'p':np.array(iterations_p).ravel(), \n",
+    "                            'clauses': np.array(clauses).ravel(),\n",
+    "                            'overlap': np.array(overlap).ravel(),\n",
+    "                            })\n",
+    "#         df=df[['p','clauses','overlap']]\n",
+    "        with open('3_SAT_qaoa_10_fix_p.csv', 'a') as f:\n",
+    "            df.to_csv(f, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
